[package]
name = "dyn-conn"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3.3.2"
dashmap = "4.0.2"
env_logger = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = ["any", "postgres", "mysql", "runtime-actix-rustls"] }
