[package]
name = "dyn-conn"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.6"
async-trait = "0.1.50"
env_logger = "0.8.4"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = ["any", "postgres", "mysql", "runtime-actix-rustls"] }
