[package]
name = "dyn-conn"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
sqlx = { version = "0.5.5", features = ["any", "postgres", "mysql", "runtime-async-std-rustls"] }
actix-web = "4.0.0-beta.6"
env_logger = "0.8.4"
log = "0.4.14"
