[package]
name = "pingoose"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "mock-receiver"
path = "src/mock_receiver.rs"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
hyper = { version = "0.14.9", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
prost = "0.7.0"
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = "0.4.3"

[build-dependencies]
tonic-build = "0.4.2"
