[package]
name = "xlz"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
tiny-df = { path = "../tiny-df", optional = true }

anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["serde"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = { version = "1.0.26"}
zip = "0.5.13"

[features]
default = []
rqw = ["reqwest"]
