[package]
name = "xlz"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["serde"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = { version = "1.0.26"}
zip = "0.5.13"
tokio = { version = "1.11.0", features = ["full"], optional = true }

[features]
default = []
rqw = ["reqwest"]
db = ["tokio"]
