[package]
name = "application"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
sqlz = { path = "../../sqlz" }
dyn-conn = { path = "../../dyn-conn" }
service = { path = "../service" }

actix-web = "4.0.0-beta.6"
derive_more = "0.99.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }
async-trait = "0.1.50"
