[package]
name = "ua-application"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
sqlz = { path = "../../sqlz" }
dyn-conn = { path = "../../dyn-conn" }
ua-service = { path = "../ua-service" }
ua-persistence = { path = "../ua-persistence" }

actix-web = "4.0.0-beta.8"
derive_more = "0.99.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
# tokio = { version = "1.6.1", features = ["full"] }
async-trait = "0.1.50"
anyhow = "1.0.41"
uuid = "0.8.2"
