[package]
name = "ua-service"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
dotenv = "0.15.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
serde = "1.0.126"
tokio = { version = "1.6.0", features = ["full"] }
ua-dao = { path = "../ua-dao" }
ua-model = { path = "../ua-model" }
