[package]
name = "ua-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ua-domain-model = { path = "../ua-domain-model" }

sea-query = { version = "0.12.0", features = ["with-json", "with-chrono", "with-uuid"] }
sqlx = { version = "0.5.5", features = ["any", "postgres", "mysql", "runtime-actix-rustls"] }
async-trait = "0.1.50"
derive_more = "0.99.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
